--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ h1 {
     gap: 1rem;
     grid-template-columns: minmax(auto, 250px) minmax(250px, 1fr) minmax(auto, 250px);
     grid-template-rows: min-content 1fr min-content;
-    grid-template-areas: 'header header header' 'main main main' 'footer footer footer';
+    grid-template-areas: 'header header header' 'nav nav nav' 'main main main' 'footer footer footer';
 }
 
 header {
@@ -40,8 +40,9 @@ header {
     height: min-content;
 }
 
-section {
-    grid-area: aside;
+nav {
+    grid-area: nav;
+    border: 2px solid red;
 }
 
 main {
@@ -89,3 +90,264 @@ footer {
 
 
 /* Skip links ends here */
+
+
+/* navigation starts here */
+
+
+/* navigation ends here */
+
+.hero-section {
+    margin-top: -1rem;
+}
+
+.hero-information {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin-top: 0;
+}
+
+.hero-title-name {
+    font-size: 5rem;
+    text-align: center;
+    color: #abe3db;
+    font-weight: bolder;
+    margin: 0 0 0.5rem 0;
+}
+
+.hero-title-tag {
+    font-size: 2.5rem;
+    text-align: center;
+    color: #abe3db;
+    font-weight: bolder;
+    margin: 0 0 0.5rem 0;
+}
+
+.about-section {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+
+.about-desc {
+    line-height: 2;
+}
+
+.profile-img {
+    border: 5px solid var(--active-border-color);
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    background-image: url('Assests/Images/profile\ pic.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 1rem;
+}
+
+.about-section-info {
+    border: 5px solid var(--);
+    width: 70%;
+    margin: 0 0.5rem 1rem 0.5rem;
+}
+
+
+/* HERO SECTIONS ENDS HERE */
+
+main {
+    margin-left: 1rem;
+    padding-left: 1rem;
+}
+
+.social-media-links {
+    display: flex !important;
+    flex-direction: column !important;
+    flex-wrap: nowrap !important;
+    width: fit-content;
+    padding: 1rem;
+}
+
+.social-media-links a:focus {
+    outline: 0.3rem solid var(--active-border-color);
+}
+
+.img-1 {
+    padding: 1rem 0;
+}
+
+.skills-list {
+    list-style-type: none;
+}
+
+.skills-list li::before {
+    content: '-'
+    /* '⭐'; */
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    gap: 2rem;
+    align-items: stretch;
+    list-style-type: none;
+    margin: 0.5rem auto;
+}
+
+article[class*="card"] {
+    /* border: 1px solid #ccc; */
+    box-shadow: #191c22 2px 2px;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.card-one-imgOne {
+    background-image: url("Assests/Images/Archdigest-screenshot.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    object-fit: cover;
+    max-width: 100%;
+    height: 300px;
+}
+
+.card-one-imgTwo {
+    background-image: url("Assests/Images/interactive-rating.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    object-fit: cover;
+    max-width: 100%;
+    height: 300px;
+}
+
+.card-one-imgThree {
+    background-image: url("Assests/Images/e-learning-landing-page.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    object-fit: cover;
+    max-width: 100%;
+    height: 300px;
+}
+
+.card-one-imgFour {
+    background-image: url("Assests/Images/portfolio.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    object-fit: cover;
+    max-width: 100%;
+    height: 300px;
+}
+
+.card-one-imgFive {
+    background-image: url("Assests/Images/podcast\ landing\ page.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    object-fit: cover;
+    max-width: 100%;
+    height: 300px;
+}
+
+footer a:focus,
+img:focus {
+    outline: 0.3rem solid var(--active-border-color);
+    padding: 0.5rem;
+}
+
+#contacts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#contacts h2 {
+    margin: 0 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+
+/* project section links */
+
+#projects {
+    padding: 1rem 2rem
+}
+
+.card-live-site,
+.card-code-structure {
+    border: 2px solid #ccc;
+    padding: 0.3em 0.7em;
+    text-decoration: none;
+    color: var(--main-font-color);
+    font-weight: bold;
+    margin: 0.5em;
+    font-size: 00.8rem;
+}
+
+.card-live-site:hover,
+.card-code-structure:hover {
+    background-color: #160f1b;
+    outline: 4px dashed var(--active-border-color);
+    border: none
+}
+
+.card-live-site:focus,
+.card-code-structure:focus {
+    outline: 3px solid var(--active-border-color);
+}
+
+.footer-contacts {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+}
+
+.footer-contacts a {
+    padding: 1rem;
+    margin: 1rem;
+    color: var(--main-font-family);
+}
+
+.a11y-webring-club {
+    text-align: center;
+}
+
+.a11y-webring-club a {
+    color: var(--main-font-color);
+}
+
+.webring-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    list-style-type: none;
+}
+
+.webring-list a {
+    padding: 1rem;
+    margin: 1rem;
+    color: var(--main-font-family);
+}
+
+.top-arrow a {
+    color: var(--main-font-color);
+    margin-top: 1.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: var(--body-main-color);
+}
+
+.footer-arrow {
+    font-size: 1.8rem;
+    color: #ffffff;
+}
+
+
+/* project section links ends here  */
