--- a/index.css
+++ b/index.css
@@ -351,3 +351,137 @@ img:focus {
 
 
 /* project section links ends here  */
+
+
+/* media query for mobile phones and small tablets */
+
+@media (max-width: 760px) {
+    .container {
+        grid-template-areas: 'header' 'nav' 'main' 'footer';
+        grid-template-columns: 100%;
+    }
+    h2 {
+        text-align: center;
+    }
+    #navbar-toggler {
+        display: flex;
+        flex-direction: column;
+        margin: 2rem 1rem;
+        padding: 0.5rem;
+        background-color: var(--body-main-color);
+        color: var(--active-border-color);
+        font-size: 0.5;
+        font-weight: bolder;
+        border: 3px solid #ABE3DB;
+    }
+    #navbar-toggler:focus {
+        outline: 0.3rem solid var(--active-border-color);
+    }
+    .hamburger-menu {
+        font-weight: bold;
+        font-size: 1.5rem;
+    }
+    .navbar-nav,
+    ul[data-state="open"] {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: flex-end;
+        justify-content: center;
+        height: fit-content;
+        /* border: 2px solid var(--active-border-color); */
+        margin: -2rem 1rem 1rem auto;
+        width: min-content;
+        padding: 0.5rem;
+        box-shadow: #191c22 5px 5px;
+        background-color: #182029;
+    }
+    .hide,
+    ul[data-state="closed"] {
+        display: none;
+    }
+    .nav-navigation {
+        display: flex;
+        flex-direction: column;
+    }
+    .navbar-list {
+        border-bottom: 1px solid #f5f5f5;
+        padding: 1rem 4rem;
+    }
+    .navbar-list:hover {
+        background: #111820;
+    }
+    .nav-link:focus {
+        outline: 2px solid var(--active-border-color);
+    }
+    .hero-information {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin-top: 2.5rem;
+    }
+    .hero-title-name {
+        font-size: 3rem;
+    }
+    .hero-title-tag {
+        font-size: 1.5rem;
+    }
+    main {
+        margin-left: 0;
+        line-height: 2;
+    }
+    .about-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        line-height: 1.5;
+    }
+    h1 {
+        text-align: center;
+    }
+    .social-media-links-mobile {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        width: 100%;
+        padding: 1rem;
+        margin-left: 0;
+        justify-content: space-between;
+    }
+    aside div {
+        display: none;
+    }
+    .cards {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .card-one-imgOne {
+        height: 200px;
+    }
+    .footer-contacts {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
+    }
+    .footer-contacts a {
+        padding: 0.5rem;
+        margin: 0.5rem;
+        color: var(--main-font-family);
+    }
+    .webring-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
+        list-style-type: none;
+    }
+    .webring-list li {
+        padding: 0.3rem 0;
+        margin: 0.3rem;
+        color: var(--main-font-family);
+    }
+}
